<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_conheca_o_aprimorando"
            android:icon="@drawable/ic_menu_conheca_aprimorando"
            android:title="@string/menu_aprimorando" />
        <item
            android:id="@+id/nav_conheca_a_UFTM"
            android:icon="@drawable/ic_menu_conheca_aprimorando"
            android:title="@string/menu_uftm" />
        <item
            android:id="@+id/nav_regu_graducao"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_regu_graduacao" />
        <item
            android:id="@+id/nav_dir_dev_discentes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dir_dev_discentes" />
        <item
            android:id="@+id/nav_pro_reitorias"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pro_reitorias" />
        <item
            android:id="@+id/nav_inst_uftm"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_inst_uftm" />
        <item
            android:id="@+id/nav_diretorios_academicos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_diretorios_academicos" />
        <item
            android:id="@+id/nav_ligas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ligas" />
        <item
            android:id="@+id/nav_iniciacao_cientifica"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_iniciacao_cientifica" />
        <item
            android:id="@+id/nav_coordenacoes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_coordenacoes" />
        <item
            android:id="@+id/nav_mural_de_informacoes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_mural_de_informacoes" />
        <item
            android:id="@+id/nav_calendario_academico"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_calendario_academico" />

    </group>
</menu>